# build-scripts

./: :wq  .travis.yml  CONTRIBUTING.md  JsonSurfer.travis.yml  LICENSE  Published_Dockerfiles.xls  README.md  SECURITY.md  commons-pool.travis.yml  express.travis.yml  geneid_rhel_7.3  ginkgo_travis.yml  gonum_8.5.sh  loopback-explorer.travis.yml  nan_travis.yml  node-http-proxy_travis.yml  overrides.travis.yml  pyparsing_travis.yml  pyyaml_travis.yml  sample_file.txt  slf4j-api_travis.yml  travis.yml
.github/: pull_request_template.md
ABySS/: abyss_centos_7.3.sh  abyss_rhel_7.3.sh
ACE/: ace_rhel_7.2.sh  ace_ubuntu_16.04.sh
CUDA-runtime/: cuda-runtime_rhel_7.3.sh
Docker installation on RHEL/: Using_bins_and_rpms
EVP_BytesToKey/: EVP_BytesToKey_rhel_7.6.sh
FRRouting/: README.md  frr_ubuntu_16.04.sh
FastInfoset/: FastInfoset_rhel_7.6.sh
FlexiColorPicker/: FlexiColorPicker_rhel_7.4.sh  FlexiColorPicker_ubuntu_16.04.sh
LightGBM/: build_info.json
MACS/: MACS_rhel_7.3
MUMmer/: mummer_rhel_7.3.sh
Microsoft-GSL/: Microsoft-GSL_rhel_7.4.sh  Microsoft-GSL_ubuntu_16.04.sh
Prodigal/: Prodigal_rhel_7.2.sh  prodigal_rhel_7.3
PyML/: PyML_rhel_7.3
PyOpenGL-accelerate/: pyopengl-accelerate_rhel_7.3_py27.sh  pyopengl-accelerate_ubuntu_16.04_py27.sh
Pyphen/: Pyphen_rhel_7.6.sh
R/: R_ubuntu_16.04.sh
SOAPdenovo2/: SOAPdenovo2_rhel_7.3
a/: atlas-client-common
a/abseil-cpp/: abseil-cpp_ubi_9.3.sh  build_info.json  pyproject.toml
aaargh/: aaargh_rhel_7.3.sh  aaargh_ubuntu_16.04.sh
accepts/: accepts_ubuntu_16.04.sh
activemq-cpp/: activemq-cpp_ubuntu_16.04.sh
adaro/: adaro_rhel_7.6.sh  adaro_ubuntu_18.04.sh
agent-base/: agent_base_ubuntu_18.04.sh
ajv/: ajv_ubuntu_18.04.sh
allennlp/: README.md  allennlp_v0.8.4_ubuntu_18.04.sh  allennlp_v0.9.0_rhel_7.sh  awscli_spacy_testfix.patch
allpathslg/: allpathslg_centos_52488.sh  allpathslg_rhel_7.3.sh
amqp/: amqp_ubuntu_16.04.sh
angular-moment/: angular-moment_ubuntu_18.04.sh
angular-spinner/: angular-spinner_ubuntu_18.04.sh
angular-ui-bootstrap/: angular-ui-bootstrap_ubuntu_18.04.sh
angular-ui-router/: angular-ui-router_ubuntu_18.04.sh
ansi-html/: ansi_html_ubuntu_18.04.sh
ansicolors/: ansicolors_ubuntu_18.04.sh
apache-Jsvc/: Apache_Jsvc_rhel_7.6.sh
apache-avro/: avro_1.8.2_rhel_7.6.sh
apache-calcite/: apache-calcite_rhel_7.6.sh
apache-flink/: apache-flink_1.8.3_rhel_7.6.sh
apache-hive/: apache-hive_rhel_7.6.sh
apache-http-server/: apache-http-server_ubi_8.sh
apache-oozie/: oozie_5.1.0_rhel_7.6.sh
appsody/: appsody_rhel_7.6.sh
appsody-controller/: appsody_controller_rhel_7.6.sh
archaius/: archaius_ubuntu_16.04.sh
arraymanagement/: arraymanagement_ubuntu_16.04.sh
asn1/: asn1_rhel_7.6.sh  asn1_ubuntu_18.04.sh
awx/: ansible-awx_rhel_7.7.sh  awx_ppc64le.diff
axon/: axon_ubuntu_16.04.sh
b/brunsli/: brunsli_ubi_9.3.sh  build_info.json  pyproject.toml
babel/: babel_rhel_7.4.sh
babel-preset-env/: babel-preset-env_rhel_7.6.sh
babel-preset-es2015/: babel-preset-es2015_rhel_7.4.sh  babel-preset-es2015_ubuntu_16.04.sh
babel-preset-react/: babel-preset-react_rhel_7.4.sh
babelify/: babelify_ubuntu_16.04.sh
backbone/: backbone_ubuntu_18.04.sh  patchfile
bandersnatch/: bandersnatch_rhel_7.3.sh  bandersnatch_ubuntu_16.04.sh
bashdb/: bashdb_4.4-1.0.1_rhel_7.6.sh  bashdb_rhel_7.6.sh
bean/: bean_ubuntu_18.04.sh
beanvalidation-api/: beanvalidation-api_ubuntu_16.04.sh
bib/: bib_centos_7.3.sh  bib_ubuntu_16.04
blockly/: blockly_ubuntu_18.04.sh
blockspring/: blockspring_ubuntu_16.04.sh
bloom/: bloom_rhel_7.2.sh
bluebird/: bluebird_ubuntu_18.04.sh
breakdancer/: breakdancer_centos_7.3.sh  breakdancer_rhel_7.3.sh
brotli/: brotli_ubi_9.3.sh  build_info.json
bsdiff4/: bsdiff4_rhel_7.3.sh
btrees/: btrees_ubuntu_16.04.sh
buffer/: buffer_ubuntu_18.04.sh
busybox/: busybox_rhel_7.4.sh
c/: LICENSE.txt  cni_ubi_8.4.sh  css-escape_8.5.sh
c-ares/: c-ares_rhel_7.2.sh  c-ares_ubuntu_16.04.sh
c/c-ares/: build_info.json  c-ares_rhel_7.2.sh  cares_ubi_9.3.sh  pyproject.toml
c/c-ares/Dockerfiles/latest_ubuntu_16.04/: license_list.csv
c3js/: c3js_ubuntu_16.04.sh
caffe/: caffe_rhel_7.2.sh  caffe_ubuntu_16.04.sh
caja/: caja_ubuntu_18.04.sh
canu/: canu_centos_7.3.sh  canu_ubuntu_7.3.sh
carbon-components/: carbon-components_ubuntu_18.04.sh
carbon-components-react/: carbon-components-react_ubuntu_18.04.sh
che-devfiles-registry/: che-devfiles-registry_rhel_7.6.sh
chectl/: chectl_rhel_7.6.sh
chromium/: Chromium_84.0.4119.0_RHEL_7.6.sh  (+2 more)
e/: esc_8.5.sh
f/ffmpeg/: build_info.json  ffmpeg_rhel_7.3.sh  ffmpeg_ubi_10.1.sh  ffmpeg_ubi_9.3.sh  pyproject.toml
f/ffmpeg/Dockerfiles/latest_ubuntu_16.04/: Dockerfile  README.md
g/grpc-cpp/: build_info.json  grpc-cpp-compatibility.patch  grpc-cpp_1-54_ubi_9.3.sh  grpc-cpp_ubi_9.3.sh  grpc_cpp_ubi_9.3.sh  pyproject.toml
h/hdf5/: build_info.json  hdf5_ubi_9.3.sh  pyproject.toml
l/lame/: __init__.py  build_info.json  lame_ubi_9.3.sh  pyproject.toml
l/lapack/: build_info.json  lapack_ubi_9.6.sh  pyproject.toml
l/libprotobuf/: 0001-Fixed-CVE-2026-0994-for-protobuf-6.31.1.patch  build_info.json  libprotobuf_ubi_10.1.sh  libprotobuf_ubi_9.3.sh  pyproject.toml
l/libprotobuf/abseil-cpp/: pyproject.toml
n/numactl/: build_info.json  nuamctl_ubi_9.3.sh  numactl_ubi_9.3.sh  pyproject.toml
o/openblas/: build_info.json  openblas_0.3.33_ubi_10.1.sh  openblas_ubi_9.3.sh  pyproject.toml  pyproject_v0.3.33.toml
o/openmpi/: build_info.json  openmpi_ubi_9.3.sh  pyproject.toml
o/opus/: build_info.json  opus_ubi_9.3.sh  pyproject.toml
o/orc/: build_info.json  orc-test-case-failed-ppc64le.patch  orc.patch  orc_ubi_9.3.sh  pyproject.toml
p/pgvector/: LICENSE  build_info.json  pgvector_ubi_9.3.sh  pyproject.toml
p/pulsar-client-cpp/: build_info.json  pulsar-client-cpp_ubi_9.6.sh  pyproject.toml
r/re2/: build_info.json  pyproject.toml  re2_20251105_ubi_9.3.sh  re2_ubi_9.3.sh
t/thrift-cpp/: build_info.json  pyproject.toml  thrift-cpp_ubi_9.3.sh
u/utf8proc/: build_info.json  pyproject.toml  utf8proc_ubi_9.3.sh
(+13980 files in other folders)
