# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "c-ares"
version = "{PACKAGE_VERSION}"

#One line description
description = "This is c-ares, an asynchronous resolver library, c-ares is a C library for asynchronous DNS requests (including name resolves)."

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C",
  "License :: MIT license",
]

#Project URLs
[project.urls]
homepage = "https://c-ares.org/"
upstream = "https://github.com/c-ares/c-ares/releases/download/cares-1_19_1/c-ares-1.19.1.tar.gz"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
cares = ["bin/*", "lib/*", "lib/cmake/c-ares/*", "lib/pkgconfig/*", "include/*", "share/man/man1/*", "share/man/man3/*"]
