# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "setuptools",
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "ffmpeg"
version = "{PACKAGE_VERSION}"

#One line description
description = "Cross-platform solution to record, convert and stream audio and video."

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C++",
  "License :: GPL 3",
]

dependencies = [
    "libvpx==1.13.1",
    "lame==3.100",
    "opus==1.3.1",
]

#Project URLs
[project.urls]
homepage = "https://www.ffmpeg.org"
upstream = "https://github.com/FFmpeg/FFmpeg"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
ffmpeg = ["bin/*", "lib/**/*", "include/**/*", "share/**/*"]
