# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "setuptools",
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "grpc-cpp"
version = "{PACKAGE_VERSION}"

#One line description
description = "gRPC - A high-performance, open-source universal RPC framework"

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C++",
  "License :: Apache License 2.0",
]

#Project URLs
[project.urls]
homepage = "https://github.com/grpc/grpc"
upstream = "https://github.com/grpc/grpc"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
grpccpp = ["bin/*", "lib/*", "lib/cmake/grpc/*", "lib/pkfconfig/*", "share/grpc/*", "include/**/*"]
