# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "setuptools",
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "lame"
version = "{PACKAGE_VERSION}"

#One line description
description = "High quality MPEG Audio Layer III (MP3) encoder"

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: LGPL",
]

#Project URLs
[project.urls]
homepage = "https://lame.sourceforge.io/"
upstream = "https://downloads.sourceforge.net/sourceforge/lame/lame/3.100.tar.gz"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
lame = ["__init__.py", "bin/*", "lib/*", "include/lame/*", "share/doc/lame/html/*", "share/doc/man/man1/*" ]

[project.scripts]
lame = "lame:lameCLI"
