# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
[build-system]
requires = [
    "setuptools",
    "wheel",
    "auditwheel>=5.0.0",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "libprotobuf"
version = "{PACKAGE_VERSION}"

#One line description
description = "Provides protoc compiler and C++ files for protobuf"

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C++",
  "License :: BSD 3-Clause",
]

#Project URLs
[project.urls]
homepage = "https://github.com/protocolbuffers/protobuf"
upstream = "https://github.com/protocolbuffers/protobuf"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
namespaces = true
where = ["local"]
# scanning for namespace packages is true by default in pyproject.toml, so

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
libprotobuf = ["bin/**/*", "lib64/**/*", "include/**/*"]

[tool.distutils.bdist_wheel]
plat-name = "linux_ppc64le"  # Explicitly set the platform tag
universal = false  # Disable universal wheel (forces platform-specific build)
