# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "setuptools",
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "openmpi"
version ="{PACKAGE_VERSION}"

#One line description
description = "An open source Message Passing Interface implementation."

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C, C++ ",
  "License :: BSD 3-Clause",
]

#Project URLs
[project.urls]
homepage = "https://www.open-mpi.org/"
upstream = "https://download.open-mpi.org/release/open-mpi/v5.0/openmpi-5.0.6.tar.gz"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
openmpi = ["bin/*", "lib/**/*", "include/**/*", "share/**/*", "etc/*"]
