# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "orc"
version = "{PACKAGE_VERSION}"

#One line description
description = "C++ libraries for Apache ORC"

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C++",
  "License :: Apache-2.0",
]

#Project URLs
[project.urls]
homepage = "http://github.com/apache/orc"
upstream = "https://github.com/apache/orc"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
orc = ["bin/*", "lib/*", "include/orc/*", "include/orc/**/*", "share/doc/orc/*"]

[tool.distutils.bdist_wheel]
plat-name = "linux_ppc64le"  # Explicitly set the platform tag
universal = false  # Disable universal wheel (forces platform-specific build)
