# Minimum requirements for the build system to execute.
# Do not include sys,subprocess and os as they are default packages
requires = [
    "wheel",
]

#Set build backend to setuptools
build-backend = "setuptools.build_meta"

#Project name an version
[project]
name = "thrift-cpp"
version = "0.21.0"

#One line description
description = "Compiler and C++ libraries and headers for the Apache Thrift RPC system"

maintainers = [ { name = "Python-ecosystem" } ]

#Classifiers to improve pacakage discoverability
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C++",
  "License :: Apache-2.0",
]

#Project URLs
[project.urls]
homepage = "http://thrift.apache.org"
upstream = "https://github.com/apache/thrift/tree/v0.21.0"

#Find packages files in local folder, this is needed as we are not following standar directory structure of setuptools
[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

#Package data to add bazel in wheel, this is needed as its not a .py file
[tool.setuptools.package-data]
thriftcpp = ["bin/*", "lib/*", "lib/**/*", "include/**/*"]
